tests/miniJava/neg/000212_mutation.MiniJava
class java { public static int [] java ; Main ( String [ ] java ) { { } } }
